--- a/apps/views/_layouts/fanpage.hbs
+++ b/apps/views/_layouts/fanpage.hbs
@@ -12,7 +12,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
   <link rel="stylesheet" href="/css/admin/themify-icons.css">
-  
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+
   {{!-- font awesome --}}
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -112,6 +114,15 @@
       </ul>
     </div>
   </div>
+
+  <script type="text/javascript">
+    $(window).on('load', function () {
+      $('.preloader').fadeOut('slow', function () {
+        $(this).remove();
+      });
+    })
+  </script>
+
   <div class="page-container">
     <div class="header navbar">
       <div class="header-container">
@@ -248,13 +259,7 @@
   </div>
   <script type="text/javascript" src="/js/fanpage/vendor.js"></script>
   <script type="text/javascript" src="/js/fanpage/bundle.js"></script>
-  <script type="text/javascript">
-    $(window).on('load', function () {
-      $('.preloader').fadeOut('slow', function () {
-        $(this).remove();
-      });
-    })
-  </script>
+
 </body>
 
 </html>
