--- a/apps/views/fanpage/index.hbs
+++ b/apps/views/fanpage/index.hbs
@@ -1,4 +1,5 @@
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+<script src="/js/fanpage/socket.js"></script>
 <main class="main-content bgc-grey-100">
   <div id="mainContent">
     <div class="full-container">
@@ -7,14 +8,17 @@
           <div class="layers h-100">
             <div class="bdB layer w-100"><input type="text" placeholder="Search contacts..." name="chatSearch"
                 class="form-constrol p-15 bdrs-0 w-100 bdw-0"></div>
-            <div class="layer w-100 fxg-1 scrollable pos-r">
-              <div class="peers fxw-nw ai-c p-20 bdB bgc-white bgcH-grey-50 cur-p">
-                <div class="peer"><img src="https://randomuser.me/api/portraits/men/1.jpg" alt=""
-                    class="w-3r h-3r bdrs-50p"></div>
-                <div class="peer peer-greed pL-20">
-                  <h6 class="mB-0 lh-1 fw-400">John Doe</h6><small class="lh-1 c-green-500">Online</small>
+            <div id="list-user" class="layer w-100 fxg-1 scrollable pos-r">
+              {{#each users}}
+              <div id="{{_id}}" onclick="javascript: window.location.replace('/user/{{_id}}');"
+                class="user {{#if isActive}}user-active{{/if}} peers fxw-nw ai-c p-20 bdB bgcH-grey-50 cur-p">
+                <div class="peer"><img src="{{profile_pic}}" alt="" class="w-3r h-3r bdrs-50p"></div>
+                <div id="{{_id}}-notice" class="peer peer-greed pL-20">
+                  <h6 class="mB-0 lh-1 fw-400">{{last_name}}&nbsp;{{first_name}}</h6><small
+                    class="lh-1 c-green-500">Online</small>
                 </div>
               </div>
+              {{/each}}
               <div class="peers fxw-nw ai-c p-20 bdB bgc-white bgcH-grey-50 cur-p">
                 <div class="peer"><img src="https://randomuser.me/api/portraits/men/2.jpg" alt=""
                     class="w-3r h-3r bdrs-50p"></div>
@@ -74,10 +78,10 @@
                 <div class="peers ai-c">
                   <div class="peer d-n@md+"><a href="" title="" id="chat-sidebar-toggle"
                       class="td-n c-grey-900 cH-blue-500 mR-30"><i class="ti-menu"></i></a></div>
-                  <div class="peer mR-20"><img src="https://randomuser.me/api/portraits/men/12.jpg" alt=""
-                      class="w-3r h-3r bdrs-50p"></div>
+                  <div class="peer mR-20"><img src="{{user.profile_pic}}" alt="" class="w-3r h-3r bdrs-50p"></div>
                   <div class="peer">
-                    <h6 class="lh-1 mB-0">John Doe</h6><i class="fsz-sm lh-1">Typing...</i>
+                    <h6 class="lh-1 mB-0">{{user.last_name}}&nbsp;{{user.first_name}}</h6><i
+                      class="fsz-sm lh-1">Typing...</i>
                   </div>
                 </div>
                 <div class="peers"><a href="" class="peer td-n c-grey-900 cH-blue-500 fsz-md mR-30" title=""><i
@@ -88,60 +92,48 @@
               </div>
             </div>
             <div class="layer w-100 fxg-1 bgc-grey-200 scrollable pos-r">
-              <div class="p-20 gapY-15">
+              <div class="p-20 gapY-15" id="msg-content">
+                {{#each msg}}
+                {{#if active}}
                 <div class="peers fxw-nw">
-                  <div class="peer mR-20"><img class="w-2r bdrs-50p"
-                      src="https://randomuser.me/api/portraits/men/11.jpg" alt=""></div>
+                  <div class="peer mR-20"><img class="w-2r bdrs-50p" src="{{@root.user.profile_pic}}" alt=""></div>
                   <div class="peer peer-greed">
                     <div class="layers ai-fs gapY-5">
                       <div class="layer">
                         <div class="peers fxw-nw ai-c pY-3 pX-10 bgc-white bdrs-2 lh-3/2">
-                          <div class="peer mR-10"><small>10:00 AM</small></div>
-                          <div class="peer-greed"><span>Lorem Ipsum is simply dummy text of</span></div>
-                        </div>
-                      </div>
-                      <div class="layer">
-                        <div class="peers fxw-nw ai-c pY-3 pX-10 bgc-white bdrs-2 lh-3/2">
-                          <div class="peer mR-10"><small>10:00 AM</small></div>
-                          <div class="peer-greed"><span>the printing and typesetting industry.</span></div>
-                        </div>
-                      </div>
-                      <div class="layer">
-                        <div class="peers fxw-nw ai-c pY-3 pX-10 bgc-white bdrs-2 lh-3/2">
-                          <div class="peer mR-10"><small>10:00 AM</small></div>
-                          <div class="peer-greed"><span>Lorem Ipsum has been the industry's</span></div>
+                          <div class="peer mR-10"><small>{{timestamp}}</small></div>
+                          <div class="peer-greed"><span>{{message.text}}</span></div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                {{else}}
                 <div class="peers fxw-nw ai-fe">
                   <div class="peer ord-1 mL-20"><img class="w-2r bdrs-50p"
-                      src="https://randomuser.me/api/portraits/men/12.jpg" alt=""></div>
+                      src="https://randomuser.me/api/portraits/men/3.jpg" alt=""></div>
                   <div class="peer peer-greed ord-0">
                     <div class="layers ai-fe gapY-10">
                       <div class="layer">
                         <div class="peers fxw-nw ai-c pY-3 pX-10 bgc-white bdrs-2 lh-3/2">
-                          <div class="peer mL-10 ord-1"><small>10:00 AM</small></div>
-                          <div class="peer-greed ord-0"><span>Heloo</span></div>
-                        </div>
-                      </div>
-                      <div class="layer">
-                        <div class="peers fxw-nw ai-c pY-3 pX-10 bgc-white bdrs-2 lh-3/2">
-                          <div class="peer mL-10 ord-1"><small>10:00 AM</small></div>
-                          <div class="peer-greed ord-0"><span>??</span></div>
+                          <div class="peer mL-10 ord-1"><small>{{timestamp}}</small></div>
+                          <div class="peer-greed ord-0"><span>{{message.text}}</span></div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                {{/if}}
+                {{/each}}
               </div>
             </div>
             <div class="layer w-100">
               <div class="p-20 bdT bgc-white">
-                <div class="pos-r"><input type="text" class="form-control bdrs-10em m-0" placeholder="Say something...">
-                  <button type="button" class="btn btn-primary bdrs-50p w-2r p-0 h-2r pos-a r-1 t-1"><i
-                      class="fas fa-paper-plane"></i></button></div>
+                <div class="pos-r">
+                    <input id="text" onkeydown="javascript: if (event.keyCode == 13) sendMessage();" name="text" type="text" class="form-control bdrs-10em m-0" placeholder="Say something...">
+                    <button id="btnChat" onclick="sendMessage()" type="submit" class="btn btn-primary bdrs-50p w-2r p-0 h-2r pos-a r-1 t-1"><i
+                        class="fas fa-paper-plane"></i></button>
+                </div>
               </div>
             </div>
           </div>
@@ -150,3 +142,53 @@
     </div>
   </div>
 </main>
+<script>
+
+  function sendMessage() {
+    var msg = $('#text').val();
+    //append
+    appendMessage(msg);
+
+    $('#text').val("");
+
+    var message = {};
+    message.text = msg;
+
+    var active = $('.user-active');
+    var user_id = active.attr('id');
+    $.ajax({
+      url: 'message/' + user_id,
+      method: 'POST',
+      contentType: 'application/json',
+      dataType: 'json',
+      data: JSON.stringify(message),
+      success: value => {
+        console.log('Success send new message');
+      },
+      error: error => {
+        console.log('Failed to send message, Err: ' + error);
+      }
+    })
+    return false;
+  }
+
+  function appendMessage(msg) {
+    var now = moment().format("DD/MM/YYYY hh:mm");
+    var element = `<div class="peers fxw-nw ai-fe" >
+      <div class="peer ord-1 mL-20" > <img class="w-2r bdrs-50p"
+        src="https://randomuser.me/api/portraits/men/3.jpg" alt=""></div>
+        <div class="peer peer-greed ord-0">
+          <div class="layers ai-fe gapY-10">
+            <div class="layer">
+              <div class="peers fxw-nw ai-c pY-3 pX-10 bgc-white bdrs-2 lh-3/2">
+                <div class="peer mL-10 ord-1"><small>` + now + `</small></div>
+                <div class="peer-greed ord-0"><span>` + msg + `</span></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div >`;
+    $('#msg-content').append(element);
+
+  }
+</script>
