--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,10 @@
 	z-index: 99999;
 }
 
+.user-active {
+	background-color: whitesmoke !important;
+}
+
 .lds-ellipsis {
 	display: inline-block;
 	position: relative;
