--- a/apps/views/admin/VwOrderDetail.hbs
+++ b/apps/views/admin/VwOrderDetail.hbs
@@ -9,7 +9,7 @@
                     <p class="card-text"><b>Tên khách hàng: &nbsp;</b>{{entity.TenKhachHang}}</p>
                     <p class="card-text"><b>Địa chỉ khách hàng: &nbsp;</b>{{entity.DiaChiKhachHang}}</p>
                     <p class="card-text"><b>SĐT khách hàng: &nbsp;</b>{{entity.SDTKhachHang}}</p>
-                    <p class="card-text"><b>Tổng giá: &nbsp;</b>{{entityTongGia}}</p>
+                    <p class="card-text"><b>Tổng giá: &nbsp;</b>{{entity.TongGia}}</p>
                     <p><b>Sản phẩm: </b></p>
                     {{#each products}}
                         <h4 class="card-text"><small>{{Ten}}&nbsp;</small> - {{Gia}} - {{SoLuongSP}}</h4>
